# matchanalysis

./: .env.example  Dockerfile  docker-compose.yaml  lintall.sh  manage.py  pylintrc  pyproject.toml
core/managers/: __init__.py  date_manager.py  file_manager.py
match/models/enum/: __init__.py  match_status.py
matchanalysis/: asgi.py  urls.py  wsgi.py
matchanalysis/settings/: __init__.py  database.py  django.py
scrapers/: settings.py
scrapers/items/: __init__.py  match_detail.py  match_url.py
scrapers/pipelines/: __init__.py  match.py  match_url.py
scrapers/spiders/: matchdetail.py  matchurl.py
