[tool.poetry]
name = "matchanalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.7.1"
scrapy-playwright = "^0.0.23"
django = "^4.1.3"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.5"
dateparser = "^1.1.4"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
